# hrank

./: .gitignore
captain_prime/: captain_prime
captain_prime/test/: sample1.ans  sample2.ans
convex_hull/: convex_hull.hs
cpp/: CMakeLists.txt
cpp/acm_icpc_team/: acm_icpc_team.cpp
cpp/and_product/: and_product.cpp
cpp/and_product/test/: 2.in  3.ans  3.in  4.ans  4.in  sample.ans  sample.in
cpp/beautiful_pairs/: beautiful_pairs.cpp
cpp/cipher/: cipher.cpp
cpp/coin_change/: coin_change.cpp
cpp/count_luck/: count_luck.cpp
cpp/counter_game/: a.out  counter_game.cpp
cpp/counter_game/test/: test.ans  test.in
cpp/dijkstrashortreach/: a.out  dijkstrashortreach.cpp
cpp/dijkstrashortreach/test/: sample.ans
cpp/new_years_chaos/: new_years_chaos.cpp
cpp/new_years_chaos/test/: 2.ans  2.in
cpp/sansa_and_xor/: a.out  sansa.cpp
cpp/sansa_and_xor/test/: 2.in
cpp/team_formation/: team_formation.cpp
cpp/xor_seq/: xor_seq.cpp
cpp/xor_seq/test/: 2.ans  2.in
diag_difference/: diag_difference.hs
expressions_v2/: expressions_v2.hs
expressions_v2/test/: sample3.in
fibonacci_fp/: fibonacci_fp.hs
funny_string/: funny_string.hs
hs/angry_prof/: angry_prof.hs
hs/ann_jimmy/: ann_jimmy.hs
hs/bfsshortreach/: bfsshortreach.hs
hs/bigger_is_greater/: bigger_is_greater.hs
hs/board_cutting/: board_cutting.hs
hs/crush/: crush.hs
love_letter_mystery/: love_letter_mystery.hs
maximum_indexprod/: maximum_indexprod.hs
messy_medians/: messy_medians.hs
missing_numbers/: missing_numbers.hs
pascals_triangle/: pascals_triangle  pascals_triangle.hs
(+96 files in other folders)
